# wyrdle

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/: main.py
src/wordle/backend/: hints.py
src/wordle/common/: hints.py  words.py
src/wordle/frontend/: guess.py  hints.py
src/wyrdle/backend/: hint.py  hints.py
src/wyrdle/common/: hint.py  hints.py  words.py
src/wyrdle/frontend/: game.py  guess.py  interface.py  player.py  tile.py
tests/backend/: hint.py  test_hints.py
tests/frontend/: test_player.py
