[tool.poetry]
name = "wyrdle"
version = "0.1.0"
description = "Wordle and bot in Python"
license = "MIT"
authors = [
    "Cole French <16979554+ColeFrench@users.noreply.github.com>",
]
readme = "README.md"
repository = "https://github.com/ColeFrench/wyrdle"
classifiers = [
    "Environment :: Console",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "wyrdle", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
