[tool.poetry]
name = "wyrdle"
version = "1.2.0"
description = "Wordle and bot in Python"
license = "MIT"
authors = [
    "Cole French <16979554+ColeFrench@users.noreply.github.com>",
]
readme = "README.md"
repository = "https://github.com/ColeFrench/wyrdle"
classifiers = [
    "Environment :: Console",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "wyrdle", from = "src" },
]

[tool.poetry.dependencies]
colorama = "^0.4.4"
python = "^3.9"
sshkeyboard = "^2.3.1"
typed-argument-parser = "^1.7.2"

[tool.poetry.dev-dependencies]
pydocstyle = "^6.1.1"
pylint = "^2.12.2"
pytest = "^6.2.5"

[tool.poetry.scripts]
wordle = 'wyrdle.frontend.interface:cli'
wyrdle = 'wyrdle.frontend.interface:cli'

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
